Add League Endpoint Logic
