# internal/route/web/assets/openapi.yaml
@@ -100,6 +100,29 @@ paths:
           $ref: "#/components/success/generic"
         401:
           $ref: "#/components/errors/unauthorized"
+  /leagues:
+    post:
+      tags:
+      - Leagues
+      security:
+        - bearerAuth: []
+      summary: Create League
+      description: '
+        Create the league for the Leagueify platform. An account flagged as an
+        admin is required to create the league.
+      '
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/league/creation"
+      responses:
+        201:
+          $ref: "#/components/success/created"
+        401:
+          $ref: "#/components/errors/unauthorized"
+        403:
+          $ref: "#/components/errors/forbidden"
   /sports:
     get:
       tags:
@@ -181,6 +204,23 @@ components:
           description: Password for the associated account
           type: string
           example: Test123!
+  league:
+    creation:
+      type: object
+      required:
+        - name
+        - sportID
+      properties:
+        name:
+          description: League name
+          type: string
+          example: Leagueify Hockey League
+          minLength: 3
+          maxLength: 32
+        sportID:
+          description: Sport ID for the associated league
+          type: string
+          example: FGDR
   # error responses
   errors:
     badRequest:
@@ -209,8 +249,30 @@ components:
                 description: HTTP status text
                 type: string
                 example: unauthorized
+    forbidden:
+      description: forbidden response
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              status:
+                description: HTTP status text
+                type: string
+                example: forbidden
   # successful responses
   success:
+    created:
+      description: Successfully created
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              status:
+                description: HTTP status text
+                type: string
+                example: created
     generic:
       description: Successful request
       content:
